# SynQuE

./: .gitignore  LICENSE  README.md  pyproject.toml
compile_rubrics/: generate_rubrics_image_classification.py  generate_rubrics_sentiment_analysis.py  generate_rubrics_text2sql.py  generate_rubrics_web.py  utils.py
compile_rubrics/conf/: image.yaml  sentiment_analysis.yaml  text2sql.yaml  web.yaml
data/image_classification/task_performance/: imagenet_scores.csv
data/sentiment_analysis/real_data/: balanced_real.json  balanced_real_seed=42.json  balanced_real_seed=43.json  balanced_real_seed=44.json  balanced_real_seed=45.json  balanced_real_seed=46.json  cleaned_ds_validation.json
data/sentiment_analysis/synthetic_data/: llama3.1-8b_few-shot_bg_test-time-info_v1.json  llama3.1-8b_few-shot_bg_train-time-info_v1.json  llama3.1-8b_few-shot_bg_v1.json  llama3.1-8b_few-shot_v1.json  llama3.1-8b_zero-shot_bg_test-time-info_v1.json  llama3.1-8b_zero-shot_bg_train-time-info_v1.json  llama3.1-8b_zero-shot_bg_v1.json  llama3.1-8b_zero-shot_v1.json  llama3.3-70b_few-shot_bg_test-time-info_v1.json  llama3.3-70b_few-shot_bg_train-time-info_v1.json  llama3.3-70b_few-shot_bg_v1.json  llama3.3-70b_few-shot_v1.json  llama3.3-70b_zero-shot_bg_test-time-info_v1.json  llama3.3-70b_zero-shot_bg_train-time-info_v1.json  llama3.3-70b_zero-shot_bg_v1.json  llama3.3-70b_zero-shot_v1.json  (+16 more)
src/compute/: constants.py  lens.py  representation_based.py  utils.py
src/generate/: score_image_classification.py  score_sentiment_analysis.py  score_text2sql.py  score_web.py  utils.py
(+1512 files in other folders)
